tests/errors/test_13.x
// while conditional is not boolean

fn main() -> int {

    while 1 {
    }

}